[package]
name = "dashboard"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
anyhow = { workspace = true }

